# truenas-infra

./: .env.example  .env.sops  .gitignore  .sops.yaml  CLAUDE.md  README.md  manage.sh  pyproject.toml
apps/amtctl/: Dockerfile  README.md  amt.py  canonical.yaml  docker-compose.yaml  main.py  nodes.yaml  secrets.sops.yaml
apps/homepage/: bookmarks.yaml  docker-compose.yaml  docker.yaml  kubernetes.yaml  secrets.sops.yaml  services.yaml  settings.yaml  widgets.yaml
apps/iperf3/: docker-compose.yaml
apps/meshcentral/: config.json  docker-compose.yaml
apps/minio-dev/: README.md  docker-compose.yaml  secrets.sops.yaml
apps/minio-prd/: README.md  docker-compose.yaml  secrets.sops.yaml
apps/netboot-xyz/: README.md  boot.cfg  custom.ipxe  docker-compose.yaml  menu.ipxe  schematic.yaml  talos-updater.sh
apps/pxe/: README.md  boot.cfg  docker-compose.yaml  menu.ipxe  pxe-cache.sh  pxe-download.sh  pxe-genmenu.sh  schematic.yaml  talos-updater.sh
apps/stress-dashboard/: docker-compose.yaml  main.py
bootstrap/: 01-bootstrap-notes.md
config/: apps.yaml  dns.yaml  network.yaml  services.yaml  shares.yaml  storage.yaml  talos.yaml  tls.yaml  tunables.yaml  users.yaml
docs/: beelink-rma-draft.md  bios-apply-pxe-setup.md  netboot-xyz-ipxe-keyboard-regression.md  pxe-operator.md  recovery.md  runbook.md  talos-updater-setup.md  tls-runbook.md  verification.md
scripts/: decrypt-env.sh  render-env.py  setup-minio-buckets.sh  setup-minio-lifecycle.sh  setup-minio-users.sh
tests/: conftest.py  test_apps.py  test_datasets.py  test_network.py  test_nut.py  test_pool.py  test_shares.py  test_smoke.py  test_storage_tasks.py  test_tls.py  test_tunables.py  test_users.py  test_verify.py
tools/: amt_config_discovery.py  amt_fleet_apply.py  amt_fleet_audit.py
(+39 files in other folders)
